--- a/package.json
+++ b/package.json
@@ -1,23 +1,35 @@
 {
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "next": "latest",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
-  },
-  "devDependencies": {
-    "@types/node": "17.0.4",
-    "@types/react": "17.0.38",
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.5",
-    "prettier": "^2.5.1",
-    "prettier-plugin-tailwindcss": "^0.1.1",
-    "tailwindcss": "^3.0.7",
-    "typescript": "4.5.4"
-  }
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "ts": "tsc --noEmit --incremental",
+        "postinstall": "husky install"
+    },
+    "dependencies": {
+        "next": "latest",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2"
+    },
+    "devDependencies": {
+        "@types/node": "17.0.4",
+        "@types/react": "17.0.38",
+        "@typescript-eslint/eslint-plugin": "^5.26.0",
+        "@typescript-eslint/parser": "^5.26.0",
+        "autoprefixer": "^10.4.0",
+        "eslint": "8.16.0",
+        "eslint-config-next": "12.1.6",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-prettier": "^4.0.0",
+        "husky": "^8.0.1",
+        "lint-staged": "^12.4.2",
+        "postcss": "^8.4.5",
+        "prettier": "^2.6.2",
+        "prettier-plugin-tailwindcss": "^0.1.1",
+        "sass": "^1.52.1",
+        "tailwindcss": "^3.0.7",
+        "typescript": "4.5.4"
+    }
 }
