--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
         "postinstall": "husky install"
     },
     "dependencies": {
+        "modern-normalize": "^1.1.0",
         "next": "latest",
         "react": "^17.0.2",
         "react-dom": "^17.0.2"
     },
     "devDependencies": {
+        "@tailwindcss/line-clamp": "^0.4.0",
         "@types/node": "17.0.4",
         "@types/react": "17.0.38",
         "@typescript-eslint/eslint-plugin": "^5.26.0",
