--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
         "postinstall": "husky install"
     },
     "dependencies": {
+        "@heroicons/react": "^1.0.6",
+        "animate.css": "^4.1.1",
         "modern-normalize": "^1.1.0",
         "next": "latest",
         "react": "^17.0.2",
-        "react-dom": "^17.0.2"
+        "react-dom": "^17.0.2",
+        "react-icons": "^4.3.1"
     },
     "devDependencies": {
+        "@svgr/webpack": "^6.2.1",
         "@tailwindcss/line-clamp": "^0.4.0",
         "@types/node": "17.0.4",
         "@types/react": "17.0.38",
