--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "next": "latest",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
-        "react-icons": "^4.3.1"
+        "react-icons": "^4.3.1",
+        "recoil": "^0.7.3-alpha.2"
     },
     "devDependencies": {
         "@svgr/webpack": "^6.2.1",
