--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@tailwindcss/line-clamp": "^0.4.0",
         "@types/node": "17.0.4",
         "@types/react": "17.0.38",
+        "@types/swiper": "^6.0.0",
         "@typescript-eslint/eslint-plugin": "^5.26.0",
         "@typescript-eslint/parser": "^5.26.0",
         "autoprefixer": "^10.4.0",
