--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "classnames": "^2.3.1",
         "modern-normalize": "^1.1.0",
         "next": "latest",
+        "nprogress": "^0.2.0",
         "query-string": "^7.1.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
@@ -30,6 +31,7 @@
         "@tailwindcss/aspect-ratio": "^0.4.0",
         "@tailwindcss/line-clamp": "^0.4.0",
         "@types/node": "17.0.4",
+        "@types/nprogress": "^0.2.0",
         "@types/react": "17.0.38",
         "@types/swiper": "^6.0.0",
         "@typescript-eslint/eslint-plugin": "^5.26.0",
