--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "react-dom": "^17.0.2",
         "react-icons": "^4.3.1",
         "react-loading-skeleton": "^3.1.0",
+        "react-select": "^5.3.2",
         "react-tippy": "^1.4.0",
         "recoil": "^0.7.3-alpha.2",
         "swiper": "^8.2.2",
