--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-icons": "^4.3.1",
+        "react-lazyload": "^3.2.0",
         "react-loading-skeleton": "^3.1.0",
         "react-select": "^5.3.2",
         "react-window": "^1.8.7",
@@ -35,6 +36,7 @@
         "@tailwindcss/line-clamp": "^0.4.0",
         "@types/node": "17.0.4",
         "@types/react": "17.0.38",
+        "@types/react-lazyload": "^3.2.0",
         "@types/swiper": "^6.0.0",
         "@typescript-eslint/eslint-plugin": "^5.26.0",
         "@typescript-eslint/parser": "^5.26.0",
