--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "@tailwindcss/line-clamp": "^0.4.0",
         "@types/node": "17.0.4",
         "@types/react": "17.0.38",
+        "@types/react-dom": "^18.0.5",
         "@types/react-lazyload": "^3.2.0",
         "@types/swiper": "^6.0.0",
         "@typescript-eslint/eslint-plugin": "^5.26.0",
