--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
         "prettier": "^2.6.2",
         "prettier-plugin-tailwindcss": "^0.1.1",
         "sass": "^1.52.1",
+        "tailwind-scrollbar-hide": "^1.1.7",
         "tailwindcss": "^3.0.7",
         "typescript": "4.5.4"
     }
