--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "modern-normalize": "^1.1.0",
         "next": "latest",
         "nextjs-progressbar": "^0.0.14",
+        "node-html-parser": "^5.3.3",
         "query-string": "^7.1.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
