--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
         "@emotion/styled": "^11.9.3",
         "@headlessui/react": "^1.6.4",
         "@heroicons/react": "^1.0.6",
+        "@next-auth/mongodb-adapter": "^1.0.3",
         "@tippyjs/react": "^4.2.6",
         "animate.css": "^4.1.1",
         "axios": "^0.27.2",
         "classnames": "^2.3.1",
         "modern-normalize": "^1.1.0",
+        "mongodb": "^4.7.0",
         "next": "latest",
+        "next-auth": "^4.6.1",
         "nextjs-progressbar": "^0.0.14",
         "node-html-parser": "^5.3.3",
         "query-string": "^7.1.1",
