--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "query-string": "^7.1.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-hot-toast": "^2.2.0",
         "react-icons": "^4.3.1",
         "react-lazyload": "^3.2.0",
         "react-loading-skeleton": "^3.1.0",
