--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "react-virtuoso": "^2.13.2",
         "recoil": "^0.7.3-alpha.2",
         "swiper": "^8.2.2",
+        "swr": "^1.3.0",
         "transition-hook": "^1.5.2",
         "usehooks-ts": "^2.5.4"
     },
