--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "usehooks-ts": "^2.5.4"
     },
     "devDependencies": {
+        "@netlify/plugin-nextjs": "^4.11.0",
         "@svgr/webpack": "^6.2.1",
         "@tailwindcss/aspect-ratio": "^0.4.0",
         "@tailwindcss/line-clamp": "^0.4.0",
