--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "animate.css": "^4.1.1",
         "axios": "^0.27.2",
         "classnames": "^2.3.1",
+        "framer-motion": "^6.5.0",
         "modern-normalize": "^1.1.0",
         "mongodb": "^4.7.0",
         "next": "latest",
