--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
         "mongoose": "^6.5.2",
         "next": "latest",
         "next-auth": "^4.6.1",
-        "nextjs-progressbar": "^0.0.14",
         "node-html-parser": "^5.3.3",
+        "nprogress": "^0.2.0",
         "query-string": "^7.1.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
@@ -47,6 +47,7 @@
         "@tailwindcss/aspect-ratio": "^0.4.0",
         "@tailwindcss/line-clamp": "^0.4.0",
         "@types/node": "17.0.4",
+        "@types/nprogress": "^0.2.0",
         "@types/react": "17.0.38",
         "@types/react-dom": "^18.0.5",
         "@types/react-lazyload": "^3.2.0",
