--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,12 @@
         "@typescript-eslint/no-explicit-any": "off",
         "@typescript-eslint/no-non-null-assertion": "off",
         "@typescript-eslint/no-var-requires": "off",
+        "no-console": [
+            "error",
+            {
+                "allow": ["time", "timeEnd"]
+            }
+        ],
         "@typescript-eslint/no-unused-vars": [
             "error",
             {
