chore: 🤖 follow the new rule 'no-console'

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,7 +13,7 @@
         "no-console": [
             "error",
             {
-                "allow": ["time", "timeEnd"]
+                "allow": ["time", "timeEnd", "error"]
             }
         ],
         "@typescript-eslint/no-unused-vars": [
