--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "axios": "^0.27.2",
         "classnames": "^2.3.1",
         "framer-motion": "^6.5.0",
+        "jotai": "^1.8.3",
         "modern-normalize": "^1.1.0",
         "mongodb": "^4.7.0",
         "mongoose": "^6.5.2",
