--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
         "react-dom": "^17.0.2",
         "react-hot-toast": "^2.2.0",
         "react-icons": "^4.3.1",
-        "react-lazyload": "^3.2.0",
+        "react-lazy-load": "^4.0.1",
         "react-loading-skeleton": "^3.1.0",
         "react-select": "^5.3.2",
         "react-virtuoso": "^2.13.2",
