--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@heroicons/react": "^2.0.10",
         "@next-auth/mongodb-adapter": "^1.0.3",
         "@tippyjs/react": "^4.2.6",
+        "@vercel/analytics": "^0.1.1",
         "animate.css": "^4.1.1",
         "axios": "^0.27.2",
         "classnames": "^2.3.1",
