--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
         "modern-normalize": "^1.1.0",
         "mongodb": "^4.7.0",
         "mongoose": "^6.6.6",
-        "next": "latest",
+        "next": "^12.3.1",
         "next-auth": "^4.6.1",
         "nprogress": "^0.2.0",
         "query-string": "^7.1.1",
