--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
         "next-auth": "^4.6.1",
         "nprogress": "^0.2.0",
         "query-string": "^7.1.1",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
+        "react": "latest",
+        "react-dom": "latest",
         "react-hot-toast": "^2.2.0",
         "react-icons": "^4.3.1",
         "react-if": "^4.1.4",
