--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
         "@tippyjs/react": "^4.2.6",
         "@vercel/analytics": "^0.1.1",
         "animate.css": "^4.1.1",
+        "ariakit": "^2.0.0-next.41",
         "axios": "^0.27.2",
         "classnames": "^2.3.1",
         "framer-motion": "^6.5.0",
         "jotai": "^1.8.3",
+        "lepre": "^0.6.1",
         "modern-normalize": "^1.1.0",
         "mongodb": "^4.7.0",
         "mongoose": "^6.6.6",
@@ -36,6 +38,7 @@
         "react-lazy-load": "^4.0.1",
         "react-loading-skeleton": "^3.1.0",
         "react-select": "^5.3.2",
+        "react-textarea-autosize": "^8.3.4",
         "react-virtuoso": "^2.13.2",
         "swiper": "^8.2.2",
         "swr": "^1.3.0",
