--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "react-select": "^5.3.2",
         "react-textarea-autosize": "^8.3.4",
         "react-virtuoso": "^2.13.2",
+        "socket.io-client": "^4.5.3",
         "swiper": "^8.2.2",
         "swr": "^1.3.0",
         "transition-hook": "^1.5.2",
