--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "axios": "^0.27.2",
         "classnames": "^2.3.1",
         "framer-motion": "^6.5.0",
+        "ioredis": "^5.3.2",
         "jotai": "^1.8.3",
         "modern-normalize": "^1.1.0",
         "mongodb": "^4.7.0",
